--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
 body{
   font-family: 'Noto Sans', sans-serif;
 }
+h1,h2,h3,h4,h5,h6{
+  font-family: 'Noto Sans', sans-serif;
+}
 
 /* header top */
 .header-top {
@@ -42,6 +45,64 @@ body{
   padding: 5px 0px;
 }
 
+/* Hero section css */
+.hero-section{
+  background-image: url(assets/img/hero.jpg);
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+}
+.hero-section:after{
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: -1;
+  opacity: .6;
+}
+.hero-content-wrapper p {
+  color: #fff;
+  font-weight: 600;
+  /* padding: 0; */
+  margin-bottom: 0;
+  text-transform: uppercase;
+}
+
+.hero-content-wrapper h1 {
+  color: #fff;
+  font-size: 38px;
+  text-transform: uppercase;
+  margin-top: 9px;
+  font-weight: 900;
+}
+
+
+
+.inso-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    /* text-decoration: none; */
+    transition: .3s;
+    padding: 10px 20px;
+}
+.inso-btn.inso-btn-dark{
+  background: #0278f2;
+}
+.inso-btn.inso-btn-white{
+  background: #fff;
+  color: #0278f2;
+}
+.inso-btn:hover {
+    text-decoration: none;
+    color: #ddd;
+}
+.hero-content-wrapper {
+  padding: 190px 0px;
+}
 /* footer css */
 footer {
   background: #0c2034;
